[gd_scene load_steps=5 format=3 uid="uid://c3ml4t1h75tj0"]

[ext_resource type="FontFile" uid="uid://cjc6s10hemgj7" path="res://Assets/Arts/Gui/Cyberphont/Dialogue Font/Fewture.ttf" id="1_12hf5"]
[ext_resource type="Script" path="res://Scripts/NPC/textbox.gd" id="1_oebwf"]
[ext_resource type="PackedScene" uid="uid://b7o5nslhfk653" path="res://Scenes/yes_no_choice_panel.tscn" id="3_ttkmc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xeaug"]
bg_color = Color(0.113725, 0, 0.286275, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)

[node name="Textbox" type="CanvasLayer"]
script = ExtResource("1_oebwf")

[node name="TextboxContainer" type="MarginContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -162.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="Panel" type="Panel" parent="TextboxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xeaug")

[node name="MarginContainer" type="MarginContainer" parent="TextboxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Panel" type="Panel" parent="TextboxContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TextboxContainer/MarginContainer"]
clip_contents = true
layout_mode = 2

[node name="Start" type="Label" parent="TextboxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("1_12hf5")
theme_override_font_sizes/font_size = 36
text = "*"
horizontal_alignment = 3

[node name="Label" type="Label" parent="TextboxContainer/MarginContainer/HBoxContainer"]
modulate = Color(0, 1, 1, 1)
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
size_flags_vertical = 1
auto_translate = false
localize_numeral_system = false
theme_override_fonts/font = ExtResource("1_12hf5")
theme_override_font_sizes/font_size = 36
text = "Huh, you just discovered what it takes to become a legend... Grab your iron - let's mobilize."
autowrap_mode = 2
justification_flags = 227
clip_text = true

[node name="End" type="Label" parent="TextboxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("1_12hf5")
theme_override_font_sizes/font_size = 36
text = " v"
horizontal_alignment = 3

[node name="LetterSound" type="AudioStreamPlayer2D" parent="."]

[node name="LetterTimer" type="Timer" parent="."]

[node name="YesNoDialogueChoice" parent="." instance=ExtResource("3_ttkmc")]
visible = false
offset_top = 364.0
offset_right = 130.0
offset_bottom = 425.0

[connection signal="timeout" from="LetterTimer" to="." method="_on_timer_timeout"]
